# open-agent-sdk

./: .gitignore  README.md  news_report_artificial_intelligence_2025_20260321_1640.md  news_report_artificial_intelligence_2025_20260321_1651.md  news_report_rust_programming_language_20260321_1604.md  package.json  pyproject.toml  test_all_features.py  test_comparison.py  test_framework.py  test_full.py  test_integrations.py  test_production.py
examples/: 01_basic_agent.py  01_demo.py  02_crew_pipeline.py  03_parallel_tasks.py  04_test_llms.py  05_production_crews.py  06_full_demo.py  07_openclaw_demo.py  08_unified_demo.py  09_practical_demo.py  10_full_system_demo.py  11_agentic_demo.py  12_advanced_agi_demo.py  13_true_agi_demo.py  14_tui_demo.py  15_tui_complete.py  16_skills_demo.py  17_skill_workspace.py  18_mcp_demo.py  19_self_improvement_demo.py  20_auto_feature_demo.py  21_agent_daemon.py  basic_usage.py  browser_demo.py
memory/: MEMORY.md
smithai-builder/: main.py  requirements.txt
src/core/: agent.ts  base-agent.ts  gateway.ts  logger.ts  tool-registry.ts  types.ts
src/memory/: memory-store.ts
src/open_agent/: __init__.py  cli.py  framework.py
src/open_agent/agents/: __init__.py  runtime.py
src/open_agent/agents/auth/: __init__.py  profiles.py
src/open_agent/agents/sandbox/: __init__.py  backend.py
src/open_agent/agents/skills/: __init__.py  registry.py
src/open_agent/agents/tools/: __init__.py  base.py  filesystem.py  shell.py  todo.py
src/open_agent/automation/: __init__.py  browser.py
src/open_agent/backends/: openshell.py
src/open_agent/canvas/: __init__.py  workspace.py
src/open_agent/channels/: __init__.py  additional.py  channel_manager.py  registry.py
src/open_agent/channels/transport/: __init__.py  base.py
src/open_agent/config/: production.py  secrets.py  settings.py
src/open_agent/core/: __init__.py  gateway.py  health.py  tool_registry.py  types.py
src/open_agent/crew/: __init__.py
src/open_agent/gateway/: __init__.py
src/open_agent/gateway/auth/: __init__.py  auth.py
src/open_agent/gateway/protocol/: __init__.py  router.py
src/open_agent/gateway/sessions/: __init__.py  manager.py
src/open_agent/integrations/: __init__.py  github.py  google.py  notion.py  openclawsdk.py
src/open_agent/llm/: __init__.py  providers.py
src/open_agent/memory/: memory.py
src/open_agent/models/: nemotron.py
src/open_agent/orchestration/: openclaw.py  unified.py
src/open_agent/plugins/: __init__.py  manager.py
src/open_agent/providers/: __init__.py  nemotron.py
src/open_agent/sandbox/: __init__.py  browser.py
src/open_agent/tools/: __init__.py  built_in.py  modular.py  skills.py
src/open_agent/types/: __init__.py
src/open_agent/ui/: tui.py
src/open_agent/utils/: __init__.py
src/open_agent/voice/: __init__.py  stt.py  tts.py
src/smith_ai/: __init__.py
src/smith_ai/agentic/: __init__.py
src/smith_ai/agents/: __init__.py
src/smith_ai/agi/: __init__.py  auto_feature.py  self_improvement.py
src/smith_ai/agi/v2/: __init__.py  __init__.py.bak
src/smith_ai/browser/: __init__.py
src/smith_ai/browser/cdp/: __init__.py
src/smith_ai/browser/remote/: __init__.py
src/smith_ai/browser/stealth/: __init__.py
src/smith_ai/captcha/: __init__.py
src/smith_ai/core/: __init__.py  types.py
src/smith_ai/crew/: __init__.py
src/smith_ai/edge/: __init__.py
src/smith_ai/enterprise/: __init__.py
src/smith_ai/graph/: __init__.py
src/smith_ai/integrations/: __init__.py  discord.py  github.py  google.py  jira.py  notion.py  slack.py
src/smith_ai/llm/: __init__.py
src/smith_ai/mcp/: __init__.py
src/smith_ai/runtime/: __init__.py
src/smith_ai/sandbox/: __init__.py
src/smith_ai/skills/: __init__.py
src/smith_ai/storage/: __init__.py
src/smith_ai/tools/: __init__.py
src/smith_ai/tui/: __init__.py
tests/: test_enterprise.py  test_open_agent.py  test_smith_ai.py
