[project]
name = "smith-ai"
version = "2.0.0"
description = "Enterprise AI Agent Framework - Browser Automation, Anti-Detection, Multi-Agent Orchestration, 15+ Integrations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Himan D", email = "himanshu@open.ai"}]
keywords = ["ai", "agent", "llm", "browser-automation", "anti-detection", "multi-agent", "crew", "web-scraping", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=5.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-genai>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "cohere>=5.0.0",
]
browser = [
    "playwright>=1.40.0",
    "websockets>=11.0.0",
]
stealth = [
    "playwright>=1.40.0",
    "websockets>=11.0.0",
    "undetected-chromedriver>=3.5.0",
]
captcha = [
    "2captcha-python>=1.0.0",
]
integrations = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
]
tui = [
    "textual>=0.50.0",
    "rich>=13.0.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-genai>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "cohere>=5.0.0",
    "playwright>=1.40.0",
    "websockets>=11.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "textual>=0.50.0",
    "rich>=13.0.0",
]

[project.scripts]
smith-ai = "smith_ai.cli:main"
smith-agent = "smith_ai.cli:agent_mode"
smith-browser = "smith_ai.cli:browser_mode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smith_ai"]
